# lpt-event

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  DEPLOYMENT.md  LICENSE.md  README.md  app.yml  bun.lockb  components.json  databricks.yml  grant_db_access.py  grant_db_permissions.py  list_db_records.py  list_db_schema.py  package.json  pyproject.toml  test_db_connection.py  tsconfig.json  verify_active_db.py
src/lpt_event/: __init__.py
src/lpt_event/backend/: app.py  claude skills explain.txt  config.py  dependencies.py  logger.py  models.py  router.py  runtime.py  utils.py
src/lpt_event/ui/: index.html
src/lpt_event/ui/components/events/: event-form-dialog.tsx
src/lpt_event/ui/components/ui/: avatar.tsx  badge.tsx  card.tsx  separator.tsx  sidebar.tsx  skeleton.tsx
src/lpt_event/ui/lib/: api.ts
src/lpt_event/ui/routes/_sidebar/: events.$eventId.tsx  events.tsx  route.tsx
src/lpt_event/ui/types/: routeTree.gen.ts
